--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,6 +1,23 @@
 version: "3.9"
 
 services:
+  face_api:
+    build:
+      context: ../ai_service
+    container_name: face_api
+    environment:
+      - FACE_MODEL_NAME=buffalo_l
+      - FACE_DET_SIZE=320
+      - FACE_PROVIDERS=CPUExecutionProvider
+    volumes:
+      - face_models:/root/.insightface
+    ports:
+      - "8001:8000"
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://127.0.0.1:8000/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
   mysql:
     image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
@@ -24,6 +41,8 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
+      face_api:
+        condition: service_healthy
     environment:
       WEB_DOCUMENT_ROOT: /app/public
       APP_ENV: ${APP_ENV}
@@ -36,6 +55,8 @@ services:
       DB_DATABASE: attendance
       DB_USERNAME: attendance
       DB_PASSWORD: attendance
+      FACE_PROVIDER: http
+      FACE_API_BASE: http://face_api:8000
     working_dir: /app
     volumes:
       - ./:/app
@@ -51,3 +72,4 @@ services:
 
 volumes:
   db_data:
+  face_models:
