--- a/ai_service/Dockerfile
+++ b/ai_service/Dockerfile
@@ -1,10 +1,11 @@
-FROM python:3.10-slim
+FROM python:3.12-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
 # System deps for OpenCV
 RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential g++ gcc make wget \
     libgl1 libglib2.0-0 && \
     rm -rf /var/lib/apt/lists/*
 
@@ -16,4 +17,3 @@ COPY app ./app
 
 EXPOSE 8000
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
-
