--- a/ai_service/requirements.txt
+++ b/ai_service/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
+fastapi==0.119.0
+uvicorn[standard]==0.37.0
+cython==3.1.4
 insightface==0.7.3
-onnxruntime==1.16.3
+onnxruntime==1.20.1
 numpy==1.26.4
 opencv-python-headless==4.10.0.84
 Pillow==10.4.0
