--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   camera: ^0.10.6
   intl: ^0.19.0
   permission_handler: ^11.3.1
+  flutter_svg: ^2.0.10+1
+  file_picker: ^8.1.2
+  path_provider: ^2.1.4
+  open_filex: ^4.4.0
 
 dev_dependencies:
   flutter_test:
@@ -26,4 +30,4 @@ dev_dependencies:
 flutter:
   assets:
     - .env
-    - .env.production
+    - assets/images/logo_tlu.png
