--- a/frontend/android/gradle.properties
+++ b/frontend/android/gradle.properties
@@ -1,3 +1,5 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.configuration-cache=false
+org.gradle.caching=false
 android.useAndroidX=true
 android.enableJetifier=true
